--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,25 @@ img {
 }
 
 .propiedad {
+    border-radius: 20px;
     padding: 30px;
     background-color: antiquewhite;
+
+}
+
+
+
+.tarjetaFavorito {
+    margin: auto;
+    background-color: wheat;
+    width: 80%;
+    height: auto;
+    margin-top: 70px;
+    display: flex;
+}
+
+table td {
+    padding: 10px;
+    padding-right: 60px;
 
 }
