--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ img {
 .tarjetaFavorito {
     margin: auto;
     background-color: wheat;
-    width: 80%;
+    width: 100%;
     height: auto;
     margin-top: 70px;
     display: flex;
@@ -112,4 +112,11 @@ table td {
     padding: 10px;
     padding-right: 60px;
 
+}
+
+.cantidadFavorito {
+    padding: 5px;
+    background-color: red;
+    border-radius: 50%;
+    color: white;
 }
